# fastapi_static_files

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/fastapi_static_files/: __init__.py  staticfiles.py
src/templates/: index.html
