[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi_static_files"
version = "0.1.0"
authors = [
  { name="Mahyar Karimi", email="mahyarkarimi@rocketmail.com" },
]
description = "Static file serving ASGI app for fast api with indexing files in directory support"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "jinja2"
]

[project.urls]
"Homepage" = "https://github.com/mahyarkarimi/fastapi_static_files.git"
"Bug Tracker" = "https://github.com/mahyarkarimi/fastapi_static_files/issues"